--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,8 +1,30 @@
+// We need to define the properties file and load it before the android block
+def keystorePropertiesFile = rootProject.file('android/key.properties')
+def keystoreProperties = new Properties()
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+
 apply plugin: 'com.android.application'
 
 android {
     namespace "setup.riceflow.app"
     compileSdk rootProject.ext.compileSdkVersion
+
+    // --- START: ADDED SIGNING CONFIGURATIONS ---
+    // ส่วนที่เพิ่มเข้ามาเพื่อตั้งค่าการลงนามแอป
+    signingConfigs {
+        release {
+            if (keystorePropertiesFile.exists()) {
+                storeFile file(keystoreProperties['storeFile'])
+                storePassword keystoreProperties['storePassword']
+                keyAlias keystoreProperties['keyAlias']
+                keyPassword keystoreProperties['keyPassword']
+            }
+        }
+    }
+    // --- END: ADDED SIGNING CONFIGURATIONS ---
+
     defaultConfig {
         applicationId "setup.riceflow.app"
         minSdkVersion rootProject.ext.minSdkVersion
@@ -11,13 +33,17 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         aaptOptions {
-             // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
-             // Default: https://android.googlesource.com/platform/frameworks/base/+/282e181b58cf72b6ca770dc7ca5f91f135444502/tools/aapt/AaptAssets.cpp#61
+            // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
+            // Default: https://android.googlesource.com/platform/frameworks/base/+/282e181b58cf72b6ca770dc7ca5f91f135444502/tools/aapt/AaptAssets.cpp#61
             ignoreAssetsPattern '!.svn:!.git:!.ds_store:!*.scc:.*:!CVS:!thumbs.db:!picasa.ini:!*~'
         }
     }
     buildTypes {
         release {
+            // --- ADD THIS LINE ---
+            // บรรทัดนี้จะบอกให้ release build ใช้ signing config ที่เราสร้างไว้
+            signingConfig signingConfigs.release
+            
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
