--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -17,6 +17,9 @@ end
 target 'App' do
   capacitor_pods
   # Add your Pods here
+  
+  # OneSignal SDK
+  pod 'OneSignalXCFramework', '>= 5.0.0', '< 6.0'
 end
 
 post_install do |installer|
