feat: เพิ่มระบบส่ง Push Notification ผ่าน OneSignal
Commit นี้เป็นการเพิ่มฟีเจอร์สำหรับส่ง Push Notification ผ่าน OneSignal API

การเปลี่ยนแปลงหลักประกอบด้วย:
- สร้าง UI Component ใหม่ ([NotificationSender](cci:1://file:///c:/Users/Acer/Documents/GitHub/mobile-first-looker-ui/src/components/notification/NotificationSender.tsx:16:0-228:2)) สำหรับการสร้างข้อความ Notification ซึ่งประกอบด้วย title, message, image, และ launch URL
- สร้าง React Hook ([useOneSignalNotification](cci:1://file:///c:/Users/Acer/Documents/GitHub/mobile-first-looker-ui/src/hooks/use-onesignal-notification.ts:20:0-174:2)) ที่สามารถนำกลับมาใช้ใหม่ได้ เพื่อจัดการ Logic ในการส่ง Notification, รวมถึงการเรียก API, การตรวจสอบข้อมูล, และการจัดการ State ต่างๆ (loading, error, success)
- สร้างหน้าใหม่ (`/notification-sender`) ซึ่งจำกัดการเข้าถึงสำหรับผู้ดูแลระบบ (admin) เท่านั้น เพื่อใช้เป็นหน้าสำหรับส่ง Notification
- เพิ่มการตั้งค่าสำหรับ OneSignal REST API key โดยใช้ Environment Variables เพื่อความปลอดภัย

ทำให้ผู้ดูแลระบบสามารถส่ง Push Notification ไปยังผู้ใช้ได้โดยตรงจากหน้า UI ของแอปพลิเคชัน

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ NEXT_PUBLIC_FIREBASE_VAPID_KEY=your_vapid_key
 
 # OneSignal Configuration (existing)
 VITE_ONESIGNAL_APP_ID=your_onesignal_app_id
+VITE_ONESIGNAL_REST_API_KEY=your_onesignal_rest_api_key
