feat: เพิ่มระบบแจ้งเตือน OneSignal
- เพิ่มระบบแจ้งเตือน OneSignal
- ตั้งค่า App ID แยกสำหรับ development (`localhost`) และ production (`setup.riceflow.app`)
- เพิ่มไฟล์ `.env.production` สำหรับตัวแปรของ production
- อัพเดท [package.json](cci:7://file:///c:/Users/Acer/Documents/GitHub/mobile-first-looker-ui/package.json:0:0-0:0) ด้วยสคริปต์ `build:production`
- ระบบทำงานได้สมบูรณ์แล้วทั้งบน `localhost:8080` และ `https://setup.riceflow.app`

--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
-VITE_ONESIGNAL_APP_ID="1061c7a8-e7ac-480c-9e2b-eb4b4b92e30a"
+# OneSignal App ID for Development (localhost)
+# สร้าง App ใหม่ใน OneSignal Dashboard เฉพาะสำหรับ localhost:8080
+# แล้วแทนที่ YOUR_DEV_APP_ID ด้วย App ID ที่ได้
+VITE_ONESIGNAL_APP_ID="c77413d4-0f7d-4fe0-b7eb-99b132e451e0"
+
+# OneSignal App ID for Production (เก็บไว้สำหรับอนาคต)
+# VITE_ONESIGNAL_APP_ID_PROD="1061c7a8-e7ac-480c-9e2b-eb4b4b92e30a"
 VITE_ONESIGNAL_REST_API_KEY=a5x7vaccseuknt3xxxkm51hu
