--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
-# OneSignal Configuration
-# Get your App ID from OneSignal Dashboard (https://app.onesignal.com)
-REACT_APP_ONESIGNAL_APP_ID=30ee6a4e-100f-4fb1-9a60-0d9d50f7cc97
+VITE_FIREBASE_API_KEY=AIzaSyA8wclnPP7-JOLo_Olkk0k_FYC3wiv7wWE
+VITE_FIREBASE_AUTH_DOMAIN=riceflow-958a2.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=riceflow-958a2
+VITE_FIREBASE_STORAGE_BUCKET=riceflow-958a2.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=1043235929904
+VITE_FIREBASE_APP_ID=1:1043235929904:android:c4642c8c15d60b0cf292f5
 
-# Example: REACT_APP_ONESIGNAL_APP_ID=12345678-1234-5678-9abc-123456789012
+# VITE_FIREBASE_VAPID_KEY=your-vapid-key-here
