--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ VITE_FIREBASE_AUTH_DOMAIN=riceflow-958a2.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=riceflow-958a2
 VITE_FIREBASE_STORAGE_BUCKET=riceflow-958a2.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=1043235929904
-VITE_FIREBASE_APP_ID=1:1043235929904:android:c4642c8c15d60b0cf292f5
+VITE_FIREBASE_APP_ID=1:1043235929904:web:c4642c8c15d60b0cf292f5
 
-# VITE_FIREBASE_VAPID_KEY=your-vapid-key-here
+VITE_FIREBASE_VAPID_KEY=BCg--XvApnE0_ZcRbcUrUC_Gb2P1g4TraJBz-AVuA1Lws2hZV4U4Ew1ZMWJztf6Mo4N-HFuETAkKYnSU2RwcrBE
