feat: Complete notification system and PWA features for production deployment
🔔 Notification System Enhancements:
- Add NotificationPermissionPopup component with 3-second delay
- Implement browser notification permission request flow
- Remove OneSignal ready toast notifications for cleaner UX
- Configure production OneSignal App ID (1061c7a8-e7ac-480c-9e2b-eb4b4b92e30a)

📱 PWA Install Banner Improvements:
- Fix PWA Install Banner visibility (now shows after 5 seconds)
- Remove restrictive canInstall conditions
- Ensure banner displays on all platforms (Desktop, Mobile, iOS)
- Improve user experience with proper timing

🚀 Production Deployment Ready:
- Add comprehensive DEPLOYMENT.md guide
- Create automated build-production.js script
- Add npm run build:deploy command
- Configure for setup.riceflow.app domain
- Set up production environment variables

✨ User Experience Flow:
1. Page load → 3 seconds → Notification permission popup
2. User accepts → Browser permission dialog appears
3. 5 seconds total → PWA install banner shows
4. Smooth, non-intrusive permission flow

🎯 Target: setup.riceflow.app
🔧 OneSignal Production App ID: 1061c7a8-e7ac-480c-9e2b-eb4b4b92e30a
📦 Build Command: npm run build:deploy

Ready for production deployment with full notification and PWA capabilities.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "npm run generate-firebase-sw && vite build",
     "build:dev": "npm run generate-firebase-sw && vite build --mode development",
     "build:production": "vite build --mode production",
+    "build:deploy": "node scripts/build-production.js",
     "generate-firebase-sw": "node scripts/generate-firebase-sw.js",
     "lint": "eslint .",
     "preview": "vite preview",
