--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 8080",
-    "build": "npm run generate-firebase-sw && vite build",
-    "build:dev": "npm run generate-firebase-sw && vite build --mode development",
+    "build": "vite build",
+    "build:dev": "vite build --mode development",
     "build:production": "vite build --mode production",
     "build:deploy": "node scripts/build-production.js",
-    "generate-firebase-sw": "node scripts/generate-firebase-sw.js",
+
     "lint": "eslint .",
     "preview": "vite preview",
     "android": "npx cap run android",
@@ -73,7 +73,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
-    "react-onesignal": "^3.2.3",
+
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
@@ -81,8 +81,8 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
-    "vite-plugin-pwa": "^1.0.0",
-    "workbox-window": "^7.3.0",
+
+
     "zod": "^3.23.8"
   },
   "devDependencies": {
